added revision to ImportGit API
