# internal/api/v1/application/importgit.go
@@ -79,6 +79,7 @@ import (
 	"os"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-git/go-git/plumbing/storer"
 	git "github.com/go-git/go-git/v5"
 	"github.com/go-git/go-git/v5/plumbing"
 	"github.com/go-git/go-git/v5/plumbing/object"
@@ -123,6 +124,7 @@ func ImportGit(c *gin.Context) apierror.APIErrors {
 	var branch string
 	if ref != nil {
 		branch = ref.Name().Short()
+		revision = ref.Hash().String()
 	}
 
 	// Create a tarball
@@ -157,18 +159,25 @@ func ImportGit(c *gin.Context) apierror.APIErrors {
 	if err != nil {
 		return apierror.InternalError(err, "uploading the application sources blob")
 	}
-	log.Info("uploaded app", "namespace", namespace, "app", name, "blobUID", blobUID)
+
+	log.Info("uploaded app",
+		"namespace", namespace,
+		"app", name,
+		"blobUID", blobUID,
+		"branch", branch,
+		"revision", revision,
+	)
 
 	// Return the id of the new blob
 	response.OKReturn(c, models.ImportGitResponse{
-		BlobUID: blobUID,
-		Branch:  branch,
+		BlobUID:  blobUID,
+		Branch:   branch,
+		Revision: revision,
 	})
 	return nil
 }
 
 var (
-	errDone              = errors.New("iteration done")
 	errReferenceNotFound = errors.New("reference not found")
 )
 
@@ -288,13 +297,13 @@ func findReferenceForRevision(repo *git.Repository, revision plumbing.Hash) (*pl
 		}
 		if found {
 			matchingRef = r
-			return errDone
+			return storer.ErrStop
 		}
 
 		return nil
 	})
 	// if something bad happened, return
-	if err != nil && !errors.Is(err, errDone) {
+	if err != nil && !errors.Is(err, storer.ErrStop) {
 		return nil, err
 	}
 	// no matching reference found, return a specific error
@@ -302,6 +311,9 @@ func findReferenceForRevision(repo *git.Repository, revision plumbing.Hash) (*pl
 		return nil, errReferenceNotFound
 	}
 
+	// we need to create a new reference from the one matching the revision,
+	// because it will not return the expected commit that we checked, but the last one.
+	matchingRef = plumbing.NewReferenceFromStrings(matchingRef.Name().String(), revision.String())
 	return matchingRef, nil
 }
 
@@ -319,18 +331,18 @@ func containsRevision(repo *git.Repository, revision plumbing.Hash, commitMap ma
 	err = commitIter.ForEach(func(c *object.Commit) error {
 		if c.Hash.String() == revision.String() {
 			found = true
-			return errDone
+			return storer.ErrStop
 		}
 
 		if _, found := commitMap[c.Hash.String()]; found {
-			return errDone
+			return storer.ErrStop
 		}
 
 		commitMap[c.Hash.String()] = struct{}{}
 		return nil
 	})
 
-	if err != nil && !errors.Is(err, errDone) {
+	if err != nil && !errors.Is(err, storer.ErrStop) {
 		return found, err
 
 	}
